--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "main":"public/electron.js",
+  "main": "public/electron.js",
   "homepage": "./",
   "name": "app",
   "version": "0.1.0",
@@ -11,17 +11,18 @@
     "electron-is-dev": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start-react": "react-scripts start",
     "build-react": "react-scripts build",
-    "start-electron":"nodemon --watch ./public/* --exec \"electron .\"",
-    "dev":"concurrently \"npm run start-react\" \"wait-on http://localhost:3000 && npm run start-electron\" ",
+    "start-electron": "nodemon --watch ./public/* --exec \"electron .\"",
+    "dev": "concurrently \"npm run start-react\" \"wait-on http://localhost:3000 && npm run start-electron\" ",
     "postinstall": "electron-builder install-app-deps",
     "pack-app": "npm run build-react && electron-builder --dir",
-    "pack-build":"electron-builder --dir",
+    "pack-build": "electron-builder --dir",
     "build": "npm run build-react && electron-builder",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
